# demo-progress-django-api

./: README.md  docker-compose.yml  pyproject.toml  setup.cfg
config/: settings.py  urls.py
machines/: admin.py  models.py  serializers.py  urls.py  views.py
machines/migrations/: 0001_initial.py
